# AutoRepair

./: .env.example  .gitignore  README.md  capture_pytest.py  pyproject.toml
autorepair/: audit_store.py  bug_scenarios.py  cards.py  config.py  diagnostics.py  incident_store.py  issue_manager.py  issue_validator.py  log_parser.py  scheduler.py  schemas.py  service_registry.py  watch_state.py  watcher.py
autorepair/adapters/: ark.py  feishu.py  feishu_docx.py  github.py  llm_client.py  note_report.py
autorepair/cards/: __init__.py  variables.py
autorepair/config/: services.yaml
demo_service/: app.py  logging_config.py  order_service.py  repository.py  service.py  ticket_repository.py  ticket_service.py  ui.py
docs/: ## V1先拍板几个关键决策.md  Dashboard功能需求与待办清单.md  Stage2D.md  Stage2E.md  Stage2F-card.md  Stage2F-fix.md  Stage2F.md  Stage2G.md  Stage2H-ref.md  Stage2H.md  Stage3A-info.md  Stage3A1.md  Stage3A2.md  Stage3B.md  Stage3C.md  Stage3D.md  Stage3E.md  Stage3F.md  Stage3G-design.md  Stage3G.md  deep-research-report.md  stage1_task_definition.md  technical-whitepaper.md  初赛结项报告.md  第一阶段.md
scripts/: check_data.py  check_env.py  create_demo_issue.py  feishu_send_text_test.py  feishu_token_test.py  github_smoke_test.py  print_latest_traceback.py  repair_once.py  reset_demo_state.py  run_dashboard.py  run_demo_server.py  run_e2e_demo_check.py  run_stage2_demo.py  send_test_feishu_card.py  sync_pr_status_once.py  test_note_ms_write.py  trigger_demo_bug.py  watch_github_issues.py  watch_github_issues_once.py  watch_once.py
tests/: test_demo_ui.py  test_scripts.py
(+96 files in other folders)
